<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.eclipse.imagen</groupId>
    <artifactId>imagen</artifactId>
    <version>0.9.2-SNAPSHOT</version>
  </parent>
  <artifactId>imagen-modules</artifactId>
  <packaging>pom</packaging>
  <name>${project.groupId}:${project.artifactId}</name>

  <modules>
    <!-- library base -->
    <module>core</module>
    <module>concurrent-tile-cache</module>
    <module>scale</module>
    <module>affine</module>
    <module>warp</module>

    <!-- partial integration -->
    <module>test-support</module>
    <module>utilities</module>

    <!-- operators -->
    <module>iterators</module>
    <module>mosaic</module>
    <module>translate</module>
    <module>lookup</module>
    <module>stats</module>
    <module>zonal</module>
    <module>crop</module>
    <module>rescale</module>
    <module>nullop</module>
    <module>bandmerge</module>
    <module>bandselect</module>
    <module>border</module>
    <module>algebra</module>
    <module>buffer</module>
    <module>binarize</module>
    <module>bandcombine</module>
    <module>convolve</module>
    <module>classifier</module>
    <module>piecewise</module>
    <module>artifact</module>
    <module>format</module>
    <module>colorconvert</module>
    <module>errordiffusion</module>
    <module>orderdither</module>
    <module>colorindexer</module>
    <module>imagefunction</module>
    <module>rlookup</module>
    <module>vectorbin</module>
    <module>threshold</module>
    <module>clamp</module>
    <module>scale2</module>
    <module>shadedrelief</module>
    <module>jiffle</module>
    <module>classbreaks</module>
    <module>imageread</module>
    <module>rendered-image-browser</module>
    <module>contour</module>
    <module>vectorize</module>

    <!-- library integration -->
    <module>all</module>
  </modules>

  <!-- =========================================================== -->
  <!--     Build Configuration                                     -->
  <!-- =========================================================== -->
  <build>
    <plugins>
      <!-- test -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <systemPropertyVariables>
            <java.awt.headless>true</java.awt.headless>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <!-- javadoc configuration -->
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <release>17</release>
          <!-- Force non-modular mode for projects without module-info.java -->
          <breakiterator>true</breakiterator>
          <doclint>none</doclint>
          <encoding>UTF-8</encoding>
          <excludePackageNames>javax:it.geosolutions</excludePackageNames>
          <failOnError>false</failOnError>
          <footer>${project.name} ${project.version}</footer>
          <header>${project.name} ${project.version}</header>
          <legacyMode>true</legacyMode>
          <noqualifier>all</noqualifier>
          <quiet>true</quiet>
          <show>public</show>
          <skip>${javadoc.skip}</skip>
          <version>false</version>
          <groups>
            <group>
              <title>Core</title>
              <packages>org.eclipse.imagen*</packages>
            </group>
            <group>
              <title>Media</title>
              <packages>org.eclipse.imagen.media.*</packages>
            </group>
          </groups>
          <links>
            <link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
            <link>https://locationtech.github.io/jts/javadoc/</link>
          </links>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
      <!--
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
        </configuration>
      </plugin>
      -->
    </plugins>
  </build>
</project>
